syntax="proto3";
package msg;
option go_package="Discovery/msg;msg";
enum MsgType{
	Reg=0;
	UnReg=1;
	Watch=2;
	Push=3;
}
message msg {
	MsgType msg_type=1;
	RegMsg reg_msg=2;
	UnregMsg unreg_msg=3;
	WatchMsg watch_msg=4;
	PushMsg push_msg=5;
}
message RegInfo{
	string web_ip=1;
	int64 web_port=2;
	string rpc_ip=3;
	int64 rpc_port=4;
	bytes addition=5;
}
message RegMsg {
	string app_unique_name=1;
	RegInfo reg_info=2;
}
message UnregMsg {
	string app_unique_name=1;
}
message WatchMsg {
	string app_name=1;
}
message PushMsg {
	string app_name=1;
	map<string,RegInfo> apps=2;
}
